--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
 theme: jekyll-theme-minimal
+<html>
+  <head>
+  <title>Mindy Salvador</title>
+  <link> rel="stylesheet" href="style.css">
+  </head>
+  <body>
+  <h1>Mindy Salvador</h1>
+  </body>
+  </html>
